syntax = "proto3";
package cosmos.ugdmint.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/ugdmint/v1beta1/params.proto";
import "amino/amino.proto";
import "cosmos/ugdmint/v1beta1/mint_record.proto";

option go_package = "github.com/unigrid-project/cosmos-ugdmint/x/ugdmint/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmos/ugdmint/v1beta1/params";
  }

  // Subsidy halving interval
  rpc SubsidyHalvingInterval(QuerySubsidyHalvingIntervalRequest) returns (QuerySubsidyHalvingIntervalResponse) {
    option (google.api.http).get = "/cosmos/ugdmint/v1beta1/subsidy_halving_interval";
  }

  // AllMintRecords queries all mint records stored by the module.
  rpc AllMintRecords(QueryAllMintRecordsRequest) returns (QueryAllMintRecordsResponse) {
    option (google.api.http).get = "/cosmos/ugdmint/v1beta1/mint_records";
  }

}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// QuerySubsidyHalvingIntervalRequest is the request type for the Query/SubsidyHalvingInterval RPC method.
message QuerySubsidyHalvingIntervalRequest {}

// QuerySubsidyHalvingIntervalResponse is the response type for the Query/SubsidyHalvingInterval RPC method.
message QuerySubsidyHalvingIntervalResponse {
  // subsidy halving interval value.
  bytes subsidy_halving_interval = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryAllMintRecordsRequest is request type for the Query/AllMintRecords RPC method.
message QueryAllMintRecordsRequest {
  // You can add pagination fields here if desired
}

// QueryAllMintRecordsResponse is response type for the Query/AllMintRecords RPC method.
message QueryAllMintRecordsResponse {
  repeated MintRecord mint_records = 1 [(gogoproto.nullable) = false];
}